--- a/app/src/main/res/layout/features_fragment.xml
+++ b/app/src/main/res/layout/features_fragment.xml
@@ -7,11 +7,12 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="155dp"
             android:layout_margin="6dp">
 
             <FrameLayout
@@ -54,7 +55,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="155dp"
             android:layout_margin="6dp">
 
             <FrameLayout
@@ -97,7 +98,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="155dp"
             android:layout_margin="6dp">
 
             <FrameLayout
