--- a/app/src/main/res/drawable/gold_gradient.xml
+++ b/app/src/main/res/drawable/gold_gradient.xml
@@ -3,7 +3,7 @@
 
     <gradient
         android:angle="0"
-        android:endColor="#CDA25E"
+        android:endColor="#111"
         android:centerColor="#00000000"
         android:startColor="#00000000"
         android:type="linear" />
