Set up voice recording dialog

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#222222</color>
     <color name="colorAccent">#26C3B4</color>
     <color name="colorWhite">#fbfbfb</color>
+    <color name="colorRed">#F44336</color>
 </resources>
