--- a/app/src/main/res/layout/file_item.xml
+++ b/app/src/main/res/layout/file_item.xml
@@ -43,7 +43,8 @@
                 android:src="@drawable/ic_more_vert_black_24px"
                 android:tint="@color/colorPrimary"
                 android:layout_marginEnd="6dp"
-                android:layout_marginRight="6dp"/>
+                android:layout_marginRight="6dp"
+                android:contentDescription="@string/menu_button"/>
 
         </LinearLayout>
 
