--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -23,17 +23,24 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
-
-    <GridView
-        android:id="@+id/galleryGridView"
-        android:gravity="center"
-        android:columnWidth="140dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="16dp"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"
-        android:stretchMode="spacingWidthUniform"
+    
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+        <GridView
+            android:id="@+id/galleryGridView"
+            android:gravity="center"
+            android:columnWidth="140dp"
+            android:numColumns="auto_fit"
+            android:verticalSpacing="16dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:stretchMode="spacingWidthUniform"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </LinearLayout>
